add updated juypter notebook

--- a/coding-examples.ipynb
+++ b/coding-examples.ipynb
@@ -21,13 +21,14 @@
    "source": [
     "\"\"\"  Reverse n\n",
     "  Let's say n = 1101 (binary):\n",
+    "  - n = 1101 >> 1 = 0110 \n",
     "\n",
     "  Initial: n = 1101, result = 0000\n",
     "\n",
     "  Iteration 1:\n",
     "  - bit = 1101 & 1 = 1\n",
-    "  - result = (0000 << 1) | 1 = 0001\n",
-    "  - n = 1101 >> 1 = 0110\n",
+    "  - result = (0000 << 1) | 1 = 0001    #result = shift left 1 bit then OR a 1\n",
+    "  - n = 1101 >> 1 = 0110               #n = shift right 1 bit\n",
     "\n",
     "  Iteration 2:\n",
     "  - bit = 0110 & 1 = 0\n",
@@ -65,15 +66,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "9c43be9b-2b48-462c-ab64-0a5bd63bff57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final result = 1101\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0b10110\n",
+    "result = 0\n",
+    "bit =0\n",
+    "for i in range (5):\n",
+    "    bit = n & 1\n",
+    "    result = (result << 1) | bit\n",
+    "    n = (n >> 1)\n",
+    "print (f\"Final result = {result:b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54fc8145-bd97-47ce-87e0-298e7e413247",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "id": "b108703b-a604-4860-b1c1-4ea1c0b4d4dc",
    "metadata": {},
    "outputs": [
@@ -81,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 101 is odd 1\n"
+      " 101 is odd.\n"
      ]
     }
    ],
@@ -89,7 +115,10 @@
     "\"\"\"Check if odd/even using bitwise \"\"\"\n",
     "num = 0b0101\n",
     "is_odd = num & 1\n",
-    "print(f\" {num:b} is odd {is_odd}\")"
+    "if is_odd == 1:\n",
+    "    print(f\" {num:b} is odd.\")\n",
+    "else:\n",
+    "    print(f\" {num:b} is even.\")\n"
    ]
   },
   {
@@ -124,7 +153,11 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "9fc6f880-69b5-453c-b7cd-1944c33b5c86",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -170,9 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "id": "997c3c8c-cd86-45d9-b2ec-c3485b209c80",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -192,7 +227,14 @@
     }
    ],
    "source": [
-    "\"\"\"power of 2\"\"\"\n",
+    "\"\"\"power of 2\n",
+    "2^0 = 1  00000001\n",
+    "2^1 = 2  00000010\n",
+    "2^2 = 4  00000100\n",
+    "2^3 = 8  00001000\n",
+    "2^4 = 16 00010000\n",
+    "2^5 = 32 00100000\n",
+    "\"\"\"\n",
     "\n",
     "numbers = [2,4,6,8,16,24,32,3,7,9]\n",
     "\n",
@@ -204,6 +246,67 @@
     "for num in numbers:\n",
     "    result = is_power_of_two(num)\n",
     "    print (f\"{num} is power of two: {result}\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ec277206-2dfd-4e0d-81e0-9fd83ca4ef76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ponmlkjihgfedcba\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"reverse a string using built in SLICE NOTATION WITH NEGATIVE STEP\n",
+    "  name[::-1]\n",
+    "  #    ^^^\n",
+    "  #    |||\n",
+    "  #    ||+-- step = -1 (go backwards)\n",
+    "  #    |+--- stop = (empty, means end)\n",
+    "  #    +---- start = (empty, means beginning)\n",
+    "\n",
+    "  text = 'Hello World\"\n",
+    "  print(text[::2])     # \"HloWrd\" (every 2nd char)\n",
+    "  print(text[1::2])    # \"el ol\" (every 2nd char starting at index 1)\n",
+    "  print(text[::-2])    # \"drWolH\" (every 2nd char backwards)\n",
+    "\n",
+    "\"\"\"\n",
+    "name = \"abcdefghijklmnop\"\n",
+    "reversed_name = name[::-1]\n",
+    "print (reversed_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "fa99d106-0580-4f1c-9eff-ff54dce4e7c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 6, 3, 8, 9, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"move 0s to end of list \"\"\"\n",
+    "\n",
+    "list = [0,4,0,6,3,8,9]\n",
+    "\n",
+    "for num in list:\n",
+    "    if num == 0:\n",
+    "        list.remove(num)\n",
+    "        list.append(num)\n",
+    "\n",
+    "print(list)"
    ]
   }
  ],
