add updated jupyter notebook

--- a/coding-examples.ipynb
+++ b/coding-examples.ipynb
@@ -68,7 +68,9 @@
    "cell_type": "code",
    "execution_count": 58,
    "id": "9c43be9b-2b48-462c-ab64-0a5bd63bff57",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -91,8 +93,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "54fc8145-bd97-47ce-87e0-298e7e413247",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01101000000000000000000000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"can we reverse string, using built in function\"\"\"\n",
+    "n = 0b10110\n",
+    "text = format(n,'032b')\n",
+    "reversed = text[::-1]\n",
+    "print(reversed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52d18a34-5c7e-4e2e-8b27-bff5957a7c05",
    "metadata": {},
    "outputs": [],
    "source": []
