updated coding examples

--- a/coding-examples.ipynb
+++ b/coding-examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "id": "a17bb796-d0ed-4b77-b4e3-0f8435943a38",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i = 0 bit = 1, n =1101 result=,0\n",
-      "i = 1 bit = 0, n =110 result=,1\n",
-      "i = 2 bit = 1, n =11 result=,10\n",
-      "i = 3 bit = 1, n =1 result=,101\n",
-      "Final: n=0, result = 1011\n"
+      "i = 0 bit = 1, n =110111011 result=,0\n",
+      "i = 1 bit = 1, n =11011101 result=,1\n",
+      "i = 2 bit = 0, n =1101110 result=,11\n",
+      "i = 3 bit = 1, n =110111 result=,110\n",
+      "i = 4 bit = 1, n =11011 result=,1101\n",
+      "i = 5 bit = 1, n =1101 result=,11011\n",
+      "i = 6 bit = 0, n =110 result=,110111\n",
+      "i = 7 bit = 1, n =11 result=,1101110\n",
+      "Final: n=1, result = 11011101\n"
      ]
     }
    ],
@@ -48,10 +52,10 @@
     "  Result: 1101 becomes 1011 (reading the bits in reverse order)\n",
     "\n",
     "\"\"\" \n",
-    "n = 0b1101\n",
-    "result = 0b0000\n",
+    "n = 0b110111011\n",
+    "result = 0b00000000\n",
     "bit =0\n",
-    "for i in range(4):\n",
+    "for i in range(8):\n",
     "    # Extract least significant bit\n",
     "    bit = n & 1\n",
     "    print(f\"i = {i} bit = {bit}, n ={n:b} result=,{result:b}\")\n",
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "id": "b108703b-a604-4860-b1c1-4ea1c0b4d4dc",
    "metadata": {},
    "outputs": [
@@ -265,7 +269,7 @@
     "def is_power_of_two(num):\n",
     "    if num <= 0:\n",
     "        return False\n",
-    "    return (num & (num-1)) == 0\n",
+    "    return (num & (num-1)) == 0   #andinf \n",
     "\n",
     "for num in numbers:\n",
     "    result = is_power_of_two(num)\n",
@@ -308,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "id": "fa99d106-0580-4f1c-9eff-ff54dce4e7c3",
    "metadata": {},
    "outputs": [
@@ -331,6 +335,59 @@
     "        list.append(num)\n",
     "\n",
     "print(list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0b080da-0e68-4a4d-9b48-77b0ef1a1399",
+   "metadata": {},
+   "source": [
+    "#### \"\"\"is a number a perfect square\n",
+    "\n",
+    "num = 17\n",
+    "1^2 = 1\n",
+    "2^2 = 4\n",
+    "3^2 = 9\n",
+    "4^2 = 16\n",
+    "5^2 = 25  #stop after value > num\n",
+    "but that method is too slow\n",
+    "\n",
+    "iteration #1\n",
+    "L = 1\n",
+    "R = 17(num)\n",
+    "M = 8  middle value\n",
+    "8^2 > 17\n",
+    "\n",
+    "L = 1\n",
+    "R = 7\n",
+    "M = 4\n",
+    "4^2 = 16\n",
+    "\n",
+    "start l - 1 and r\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "def isPerfectSquare (num:int) -> bool:\n",
+    "# example num=17\n",
+    "    \n",
+    "    l = 1\n",
+    "    r = num     #17 \n",
+    "    \n",
+    "\n",
+    "    while l <= r:\n",
+    "        m = (l+r)//2     #middle        \n",
+    "        msquared = m*m\n",
+    "\n",
+    "        if num == msquared:\n",
+    "            return True\n",
+    "        elif msquared < num:\n",
+    "            l = m+1\n",
+    "        else:\n",
+    "            r = m -1\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "isPerfectSquare(17)"
    ]
   }
  ],
